# multi-agent-orchestration

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements-dev.txt
.pytest_cache/v/cache/: nodeids
docs/: flow.md  index.html
examples/: sample_tickets.jsonl
src/multi_agent_orchestration/: __init__.py  config.py  graph.py  llm.py  orchestrator.py  state.py
src/multi_agent_orchestration/agents/: __init__.py  critic.py  executor.py  planner.py  researcher.py
src/multi_agent_orchestration/app/: __init__.py  cli.py
src/multi_agent_orchestration/hitl/: __init__.py  approval.py
src/multi_agent_orchestration/tools/: __init__.py  ticket_tools.py
tests/: test_approval.py  test_graph.py  test_orchestrator.py
